Estructura, Base de Datos en progreso

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#696BBD</color>
+    <color name="colorPrimaryDark">#512DA8</color>
+    <color name="colorAccent">#E040FB</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrayText">#757575</color>
+    <color name="colorGrayDots">#EBEBEB</color>
+    <color name="colorBlueBoy">#62BCD4</color>
+    <color name="colorBlueBoyAlpha">#CEEAF2</color>
+    <color name="colorPinkGirl">#FA8997</color>
+    <color name="colorPinkGirlAlpha">#FDD9DE</color>
+    <color name="colorSurprise">#F2C06C</color>
+    <color name="colorSurpriseAlpha">#FAE7C7</color>
+    <color name="colorNavBarBack">#EEEEEE</color>
 </resources>
