--- a/names/src/main/res/layout/fragment_names.xml
+++ b/names/src/main/res/layout/fragment_names.xml
@@ -56,7 +56,7 @@
             android:textStyle="normal" />
     </LinearLayout>
 
-    <com.mindorks.placeholderview.SwipePlaceHolderView
+    <link.fls.swipestack.SwipeStack
         android:id="@+id/swipe_names_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
