--- a/gender/src/main/res/layout/activity_gender.xml
+++ b/gender/src/main/res/layout/activity_gender.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_weight="4"
     android:orientation="vertical"
-    tools:context=".GenderActivity">
+    tools:context=".presentation.GenderActivity">
 
     <TextView
         android:layout_width="match_parent"
