--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,15 @@
         android:id="@+id/main_activity_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.8"/>
+        android:layout_weight="1.8"
+        android:visibility="visible"/>
+
+    <FrameLayout
+        android:id="@+id/layout_main_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.8"
+        android:visibility="gone"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_nav_view"
