--- a/profile/src/main/res/values/colors.xml
+++ b/profile/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimary">#696BBD</color>
     <color name="colorPrimaryDark">#512DA8</color>
     <color name="colorAccent">#E040FB</color>
+    <color name="colorNavBarBack">#EEEEEE</color>
 </resources>
