Profile Section(gen qr, show profile info), Scan service in process

--- a/profile/src/main/res/values/dimens.xml
+++ b/profile/src/main/res/values/dimens.xml
@@ -37,4 +37,10 @@
     <dimen name="scan_fragment_message_size">16sp</dimen>
     <dimen name="scan_fragment_button_top_margins">20dp</dimen>
 
+    <!-- MyQR fragment dimensions -->
+    <dimen name="my_qr_fragment_message_top_margins">20dp</dimen>
+    <dimen name="my_qr_fragment_message_side_margins">16dp</dimen>
+    <dimen name="my_qr_fragment_message_size">16sp</dimen>
+    <dimen name="my_qr_fragment_image_top_margins">20dp</dimen>
+
 </resources>
