--- a/profile/src/main/res/layout/fragment_profile.xml
+++ b/profile/src/main/res/layout/fragment_profile.xml
@@ -35,6 +35,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/text_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/profile_fragment_user_name_bottom_margins"
